pre deploy2